{
  "version": 4,
  "terraform_version": "1.9.1",
  "serial": 748,
  "lineage": "93990676-1170-ca12-3512-31d37cc1f7b4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "example_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068884545639:internet-gateway/igw-07e5bf14aa696b6bd",
            "id": "igw-07e5bf14aa696b6bd",
            "owner_id": "068884545639",
            "vpc_id": "vpc-075667d9cb6a9d80e"
          },
          "dependencies": [
            "aws_vpc.example_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "example_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:068884545639:loadbalancer/app/example-alb/bc6410b78afd3a14",
            "arn_suffix": "app/example-alb/bc6410b78afd3a14",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "example-alb-2066999053.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:068884545639:loadbalancer/app/example-alb/bc6410b78afd3a14",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "example-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-055fb5efdf0437737"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-073cdf45e61d9a951"
              },
              {
                "subnet_id": "subnet-0c02488ebb368beb6"
              }
            ],
            "subnets": [
              "subnet-073cdf45e61d9a951",
              "subnet-0c02488ebb368beb6"
            ],
            "tags": {
              "Name": "example-alb"
            },
            "tags_all": {
              "Name": "example-alb"
            },
            "vpc_id": "vpc-075667d9cb6a9d80e",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.example_security_group",
            "aws_subnet.example_subnet_az1",
            "aws_subnet.example_subnet_az2",
            "aws_vpc.example_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "example_listener_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:068884545639:listener/app/example-alb/bc6410b78afd3a14/31c05d0f67367370",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:068884545639:targetgroup/example-target-group/b68811685a9da867",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:068884545639:listener/app/example-alb/bc6410b78afd3a14/31c05d0f67367370",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:068884545639:loadbalancer/app/example-alb/bc6410b78afd3a14",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.example_alb",
            "aws_lb_target_group.example_target_group",
            "aws_security_group.example_security_group",
            "aws_subnet.example_subnet_az1",
            "aws_subnet.example_subnet_az2",
            "aws_vpc.example_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "example_listener_8080",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:068884545639:listener/app/example-alb/bc6410b78afd3a14/61ffb82f117d68b9",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:068884545639:targetgroup/example-target-group/b68811685a9da867",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:068884545639:listener/app/example-alb/bc6410b78afd3a14/61ffb82f117d68b9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:068884545639:loadbalancer/app/example-alb/bc6410b78afd3a14",
            "mutual_authentication": [],
            "port": 8080,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.example_alb",
            "aws_lb_target_group.example_target_group",
            "aws_security_group.example_security_group",
            "aws_subnet.example_subnet_az1",
            "aws_subnet.example_subnet_az2",
            "aws_vpc.example_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "example_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:068884545639:targetgroup/example-target-group/b68811685a9da867",
            "arn_suffix": "targetgroup/example-target-group/b68811685a9da867",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:068884545639:targetgroup/example-target-group/b68811685a9da867",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "example-target-group",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 3600,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-075667d9cb6a9d80e"
          },
          "dependencies": [
            "aws_vpc.example_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "example_route_table_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068884545639:route-table/rtb-09fa8a8042961521e",
            "id": "rtb-09fa8a8042961521e",
            "owner_id": "068884545639",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07e5bf14aa696b6bd",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-075667d9cb6a9d80e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.example_igw",
            "aws_vpc.example_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "example_route_table_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068884545639:route-table/rtb-01ddba148e0ca84aa",
            "id": "rtb-01ddba148e0ca84aa",
            "owner_id": "068884545639",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07e5bf14aa696b6bd",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-075667d9cb6a9d80e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.example_igw",
            "aws_vpc.example_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "example_subnet_association_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-089e40c5d7065634f",
            "route_table_id": "rtb-09fa8a8042961521e",
            "subnet_id": "subnet-0c02488ebb368beb6"
          },
          "dependencies": [
            "aws_internet_gateway.example_igw",
            "aws_route_table.example_route_table_az1",
            "aws_subnet.example_subnet_az1",
            "aws_vpc.example_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "example_subnet_association_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-024de3dc39b88ee7f",
            "route_table_id": "rtb-01ddba148e0ca84aa",
            "subnet_id": "subnet-073cdf45e61d9a951"
          },
          "dependencies": [
            "aws_internet_gateway.example_igw",
            "aws_route_table.example_route_table_az2",
            "aws_subnet.example_subnet_az2",
            "aws_vpc.example_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "example_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068884545639:security-group/sg-055fb5efdf0437737",
            "description": "Security group for the Docker host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-055fb5efdf0437737",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "example-security-group",
            "name_prefix": "",
            "owner_id": "068884545639",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-075667d9cb6a9d80e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "example_subnet_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068884545639:subnet/subnet-0c02488ebb368beb6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c02488ebb368beb6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "068884545639",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-075667d9cb6a9d80e"
          },
          "dependencies": [
            "aws_vpc.example_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "example_subnet_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068884545639:subnet/subnet-073cdf45e61d9a951",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-073cdf45e61d9a951",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "068884545639",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-075667d9cb6a9d80e"
          },
          "dependencies": [
            "aws_vpc.example_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "example_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068884545639:vpc/vpc-075667d9cb6a9d80e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-070437d19c4db2e7d",
            "default_route_table_id": "rtb-0511b636b5a14c194",
            "default_security_group_id": "sg-09a55d79aa588480d",
            "dhcp_options_id": "dopt-053f2bdabfeccccd8",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-075667d9cb6a9d80e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0511b636b5a14c194",
            "owner_id": "068884545639"
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}